tests/unit/default/syntax-error/094-add-pk-table-parens-names.x.t
---- IN ----
+PK%table(foo,bar|
---- OUT ----
---- ERR ----
syntax: expected `)` after `+PK%table(foo,bar` near `|` at position 17 - at line 1
---- EXIT ----
1
